parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    ID

Grammar

Rule 0     S' -> statement
Rule 1     statement -> statement_createpackage
Rule 2     statement -> statement_destinations
Rule 3     statement -> statement_flights
Rule 4     statement -> statement_fly
Rule 5     statement -> statement_hotels
Rule 6     statement -> statement_reserve
Rule 7     statement -> statement_stay
Rule 8     statement -> statement_cars
Rule 9     statement -> statement_tours
Rule 10    statement -> statement_visit
Rule 11    statement -> statement_book
Rule 12    statement_createpackage -> CREATEPACKAGE NAME NAME
Rule 13    statement_destinations -> DESTINATIONS
Rule 14    statement_flights -> FLIGHTS DESTINATION DATE DATE
Rule 15    statement_fly -> FLY DESTINATION AIRLINE
Rule 16    statement_hotels -> HOTELS DESTINATION
Rule 17    statement_reserve -> RESERVE RENTAL DAYS
Rule 18    statement_stay -> STAY HOTEL
Rule 19    statement_cars -> CARS DESTINATION
Rule 20    statement_tours -> TOURS DESTINATION
Rule 21    statement_visit -> VISIT DESTINATION TOUR
Rule 22    statement_book -> BOOK

Terminals, with rules where they appear

AIRLINE              : 15
BOOK                 : 22
CARS                 : 19
CREATEPACKAGE        : 12
DATE                 : 14 14
DAYS                 : 17
DESTINATION          : 14 15 16 19 20 21
DESTINATIONS         : 13
FLIGHTS              : 14
FLY                  : 15
HOTEL                : 18
HOTELS               : 16
ID                   : 
NAME                 : 12 12
RENTAL               : 17
RESERVE              : 17
STAY                 : 18
TOUR                 : 21
TOURS                : 20
VISIT                : 21
error                : 

Nonterminals, with rules where they appear

statement            : 0
statement_book       : 11
statement_cars       : 8
statement_createpackage : 1
statement_destinations : 2
statement_flights    : 3
statement_fly        : 4
statement_hotels     : 5
statement_reserve    : 6
statement_stay       : 7
statement_tours      : 9
statement_visit      : 10

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . statement_createpackage
    (2) statement -> . statement_destinations
    (3) statement -> . statement_flights
    (4) statement -> . statement_fly
    (5) statement -> . statement_hotels
    (6) statement -> . statement_reserve
    (7) statement -> . statement_stay
    (8) statement -> . statement_cars
    (9) statement -> . statement_tours
    (10) statement -> . statement_visit
    (11) statement -> . statement_book
    (12) statement_createpackage -> . CREATEPACKAGE NAME NAME
    (13) statement_destinations -> . DESTINATIONS
    (14) statement_flights -> . FLIGHTS DESTINATION DATE DATE
    (15) statement_fly -> . FLY DESTINATION AIRLINE
    (16) statement_hotels -> . HOTELS DESTINATION
    (17) statement_reserve -> . RESERVE RENTAL DAYS
    (18) statement_stay -> . STAY HOTEL
    (19) statement_cars -> . CARS DESTINATION
    (20) statement_tours -> . TOURS DESTINATION
    (21) statement_visit -> . VISIT DESTINATION TOUR
    (22) statement_book -> . BOOK

    CREATEPACKAGE   shift and go to state 22
    DESTINATIONS    shift and go to state 23
    FLIGHTS         shift and go to state 21
    FLY             shift and go to state 6
    HOTELS          shift and go to state 12
    RESERVE         shift and go to state 9
    STAY            shift and go to state 5
    CARS            shift and go to state 13
    TOURS           shift and go to state 17
    VISIT           shift and go to state 20
    BOOK            shift and go to state 1

    statement_visit                shift and go to state 11
    statement_fly                  shift and go to state 14
    statement_hotels               shift and go to state 2
    statement                      shift and go to state 3
    statement_book                 shift and go to state 4
    statement_tours                shift and go to state 16
    statement_destinations         shift and go to state 8
    statement_cars                 shift and go to state 15
    statement_flights              shift and go to state 7
    statement_createpackage        shift and go to state 18
    statement_stay                 shift and go to state 19
    statement_reserve              shift and go to state 10

state 1

    (22) statement_book -> BOOK .

    $end            reduce using rule 22 (statement_book -> BOOK .)


state 2

    (5) statement -> statement_hotels .

    $end            reduce using rule 5 (statement -> statement_hotels .)


state 3

    (0) S' -> statement .



state 4

    (11) statement -> statement_book .

    $end            reduce using rule 11 (statement -> statement_book .)


state 5

    (18) statement_stay -> STAY . HOTEL

    HOTEL           shift and go to state 24


state 6

    (15) statement_fly -> FLY . DESTINATION AIRLINE

    DESTINATION     shift and go to state 25


state 7

    (3) statement -> statement_flights .

    $end            reduce using rule 3 (statement -> statement_flights .)


state 8

    (2) statement -> statement_destinations .

    $end            reduce using rule 2 (statement -> statement_destinations .)


state 9

    (17) statement_reserve -> RESERVE . RENTAL DAYS

    RENTAL          shift and go to state 26


state 10

    (6) statement -> statement_reserve .

    $end            reduce using rule 6 (statement -> statement_reserve .)


state 11

    (10) statement -> statement_visit .

    $end            reduce using rule 10 (statement -> statement_visit .)


state 12

    (16) statement_hotels -> HOTELS . DESTINATION

    DESTINATION     shift and go to state 27


state 13

    (19) statement_cars -> CARS . DESTINATION

    DESTINATION     shift and go to state 28


state 14

    (4) statement -> statement_fly .

    $end            reduce using rule 4 (statement -> statement_fly .)


state 15

    (8) statement -> statement_cars .

    $end            reduce using rule 8 (statement -> statement_cars .)


state 16

    (9) statement -> statement_tours .

    $end            reduce using rule 9 (statement -> statement_tours .)


state 17

    (20) statement_tours -> TOURS . DESTINATION

    DESTINATION     shift and go to state 29


state 18

    (1) statement -> statement_createpackage .

    $end            reduce using rule 1 (statement -> statement_createpackage .)


state 19

    (7) statement -> statement_stay .

    $end            reduce using rule 7 (statement -> statement_stay .)


state 20

    (21) statement_visit -> VISIT . DESTINATION TOUR

    DESTINATION     shift and go to state 30


state 21

    (14) statement_flights -> FLIGHTS . DESTINATION DATE DATE

    DESTINATION     shift and go to state 31


state 22

    (12) statement_createpackage -> CREATEPACKAGE . NAME NAME

    NAME            shift and go to state 32


state 23

    (13) statement_destinations -> DESTINATIONS .

    $end            reduce using rule 13 (statement_destinations -> DESTINATIONS .)


state 24

    (18) statement_stay -> STAY HOTEL .

    $end            reduce using rule 18 (statement_stay -> STAY HOTEL .)


state 25

    (15) statement_fly -> FLY DESTINATION . AIRLINE

    AIRLINE         shift and go to state 33


state 26

    (17) statement_reserve -> RESERVE RENTAL . DAYS

    DAYS            shift and go to state 34


state 27

    (16) statement_hotels -> HOTELS DESTINATION .

    $end            reduce using rule 16 (statement_hotels -> HOTELS DESTINATION .)


state 28

    (19) statement_cars -> CARS DESTINATION .

    $end            reduce using rule 19 (statement_cars -> CARS DESTINATION .)


state 29

    (20) statement_tours -> TOURS DESTINATION .

    $end            reduce using rule 20 (statement_tours -> TOURS DESTINATION .)


state 30

    (21) statement_visit -> VISIT DESTINATION . TOUR

    TOUR            shift and go to state 35


state 31

    (14) statement_flights -> FLIGHTS DESTINATION . DATE DATE

    DATE            shift and go to state 36


state 32

    (12) statement_createpackage -> CREATEPACKAGE NAME . NAME

    NAME            shift and go to state 37


state 33

    (15) statement_fly -> FLY DESTINATION AIRLINE .

    $end            reduce using rule 15 (statement_fly -> FLY DESTINATION AIRLINE .)


state 34

    (17) statement_reserve -> RESERVE RENTAL DAYS .

    $end            reduce using rule 17 (statement_reserve -> RESERVE RENTAL DAYS .)


state 35

    (21) statement_visit -> VISIT DESTINATION TOUR .

    $end            reduce using rule 21 (statement_visit -> VISIT DESTINATION TOUR .)


state 36

    (14) statement_flights -> FLIGHTS DESTINATION DATE . DATE

    DATE            shift and go to state 38


state 37

    (12) statement_createpackage -> CREATEPACKAGE NAME NAME .

    $end            reduce using rule 12 (statement_createpackage -> CREATEPACKAGE NAME NAME .)


state 38

    (14) statement_flights -> FLIGHTS DESTINATION DATE DATE .

    $end            reduce using rule 14 (statement_flights -> FLIGHTS DESTINATION DATE DATE .)

